arm64: dts: qcom: msm8939: Set remoteproc aliases
Set aliases for remoteproc devices to allow for predictable paths.
Use remoteproc0 for Wi-Fi/BT and remoteproc1 for modem.

Signed-off-by: Vincent Knecht <vincent.knecht@mailoo.org>

--- a/arch/arm64/boot/dts/qcom/msm8939.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8939.dtsi
@@ -23,6 +23,8 @@
 	aliases {
 		mmc0 = &sdhc_1; /* SDC1 eMMC slot */
 		mmc1 = &sdhc_2; /* SDC2 SD card slot */
+		remoteproc0 = &pronto;
+		remoteproc1 = &mpss;
 	};
 
 	chosen { };
