--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -378,6 +378,27 @@ ports {
 	qcom,dsi-phy-regulator-ldo-mode;
 };
 
+&camss {
+	status = "okay";
+
+	ports {
+		port@0 {
+			reg = <0>;
+			csiphy0_ep: endpoint {
+				data-lanes = <0 1 2 3>;
+				remote-endpoint = <&s5k3l8>;
+			};
+		};
+		port@1 {
+			reg = <1>;
+			csiphy1_ep: endpoint {
+				data-lanes = <0 1 2 3>;
+				remote-endpoint = <&ov5670>;
+			};
+		};
+	};
+};
+
 &cci {
 	status = "okay";
 };
@@ -404,25 +425,35 @@ ports {
 		orientation = <1>;
 
 		port {
-			rear_cam_ep: endpoint {
+			s5k3l8: endpoint {
 				data-lanes = <0 1 2 3>;
 				remote-endpoint = <&csiphy0_ep>;
 			};
 		};
 	};
-};
 
-&camss {
-	status = "okay";
-	vdda-supply = <&pm8916_l2>;
+	camera-sensor@20 { // Primary rear camera
+		compatible = "ovti,ov5670";
 
-	ports {
-		port@0 {
-			reg = <0>;
-			csiphy0_ep: endpoint {
-				clock-lanes = <7>;
-				data-lanes = <0 1 2 3>;
-				remote-endpoint = <&rear_cam_ep>;
+		reg = <0x20>;
+
+		clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
+
+		powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_HIGH>;
+		reset-gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
+		pinctrl-0 = <&camera_front_default>;
+		pinctrl-names = "default";
+		dovdd-supply = <&pm8916_l6>;
+		avdd-supply = <&pm8916_l17>;
+		dvdd-supply = <&reg_cam_vdig>;
+		status = "okay";
+
+		orientation = <0>;
+
+		port {
+			ov5670: endpoint {
+				data-lanes = <1 2>;
+				remote-endpoint = <&csiphy1_ep>;
 			};
 		};
 	};
