--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -439,6 +439,7 @@ ports {
 		reg = <0x36>;
 
 		clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
+		clock-frequency = <19200000>;
 		clock-rates = <19200000>;
 
 		powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_HIGH>;
