--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -449,10 +449,10 @@ ports {
 		};
 	};
 	
-	camera-sensor@6d { // Primary front camera
+	camera-sensor@36 { // Primary front camera
 		compatible = "ovti,ov5670";
 		
-		reg = <0x6d>;
+		reg = <0x36>;
 
 		clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
 		clock-frequency = <19200000>;
