--- a/arch/arm64/configs/msm8916_defconfig
+++ b/arch/arm64/configs/msm8916_defconfig
@@ -98,7 +98,7 @@ CONFIG_ARM_QCOM_SPM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=m
 CONFIG_CPU_FREQ_GOV_ONDEMAND=m
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
 CONFIG_CPUFREQ_DT=y
@@ -242,11 +242,13 @@ CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_POWER_RESET_QCOM_PON=y
 CONFIG_BATTERY_MAX17042=m
-CONFIG_SMB1360=m
+CONFIG_CHARGER_SMB347=m
+CONFIG_BATTERY_CW2015=m
+# CONFIG_SMB1360 is not set
 CONFIG_BATTERY_PM8916_BMS_VM=m
 CONFIG_CHARGER_PM8916_LBC=m
-CONFIG_BATTERY_RT5033=m
-CONFIG_CHARGER_RT5033=m
+# CONFIG_BATTERY_RT5033 is not set
+# CONFIG_CHARGER_RT5033 is not set
 CONFIG_THERMAL=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
@@ -291,8 +293,12 @@ CONFIG_DRM_DISPLAY_CONNECTOR=m
 CONFIG_DRM_I2C_ADV7511=m
 CONFIG_DRM_I2C_ADV7511_AUDIO=y
 CONFIG_DRM_PANEL_MIPI_DBI=m
-CONFIG_DRM_SIMPLEDRM=y
+# CONFIG_DRM_SIMPLEDRM is not set
+CONFIG_DRM_LEGACY=y
+CONFIG_FB_SIMPLE=y
+CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB=y
+CONFIG_VT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
