--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -98,6 +98,7 @@
 		regulator-name = "cam_vdig";
 		regulator-min-microvolt = <1200000>;
 		regulator-max-microvolt = <1200000>;
+		regulator-boot-on;
 		regulator-always-on;
 		gpio = <&tlmm 17 GPIO_ACTIVE_HIGH>;
 		pinctrl-0 = <&cam_vdig_default>;
@@ -393,7 +394,7 @@ ports {
 		port@1 {
 			reg = <1>;
 			csiphy1_ep: endpoint {
-				data-lanes = <0 1 2 3>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&ov5670>;
 			};
 		};
@@ -432,7 +433,9 @@ ports {
 			};
 		};
 	};
-	
+};
+
+&cci_i2c1 {
 	camera-sensor@36 { // Primary front camera
 		compatible = "ovti,ov5670";
 		
