--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -96,10 +96,10 @@
 	reg_cam_vdig: regulator-cam-vdig {
 		compatible = "regulator-fixed";
 		regulator-name = "cam_vdig";
+		startup-delay-us = <0>;
 		regulator-min-microvolt = <1200000>;
 		regulator-max-microvolt = <1200000>;
-		regulator-boot-on;
-		regulator-always-on;
+		enable-active-high;
 		gpio = <&tlmm 17 GPIO_ACTIVE_HIGH>;
 		pinctrl-0 = <&cam_vdig_default>;
 		pinctrl-names = "default";
@@ -387,13 +387,6 @@ ports {
 		port@0 {
 			reg = <0>;
 			csiphy0_ep: endpoint {
-				data-lanes = <0 1 2 3>;
-				remote-endpoint = <&s5k3l8>;
-			};
-		};
-		port@1 {
-			reg = <1>;
-			csiphy1_ep: endpoint {
 				data-lanes = <1 2>;
 				remote-endpoint = <&ov5670>;
 			};
@@ -406,49 +399,22 @@ ports {
 };
 
 &cci_i2c0 {
-	camera-sensor@2d { // Primary rear camera
-		compatible = "samsung,s5k3l8";
 
-		reg = <0x2d>;
-
-		clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
-		clock-frequency = <24000000>;
-
-		powerdown-gpios = <&tlmm 34 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&tlmm 35 GPIO_ACTIVE_LOW>;
-		pinctrl-0 = <&camera_rear_default>;
-		pinctrl-names = "default";
-		avdd-supply = <&pm8916_l17>;
-		dvdd-supply = <&reg_cam_vdig>;
-		vio-supply = <&pm8916_l6>;
-		aux-supply = <&pm8916_l10>;
-		status = "okay";
-
-		orientation = <1>;
-
-		port {
-			s5k3l8: endpoint {
-				data-lanes = <0 1 2 3>;
-				remote-endpoint = <&csiphy0_ep>;
-			};
-		};
-	};
-};
-
-&cci_i2c1 {
-	camera-sensor@36 { // Primary front camera
+	camera-sensor@10 { // Primary front camera
 		compatible = "ovti,ov5670";
 		
-		reg = <0x36>;
+		reg = <0x10>;
 
 		clocks = <&gcc GCC_CAMSS_MCLK0_CLK>;
+		clock-names = "xvclk";
 		clock-frequency = <19200000>;
 		clock-rates = <19200000>;
 
-		powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
-		pinctrl-0 = <&camera_front_default>;
+		pinctrl-0 = <&camera_front_default>, <&cam_sensor_mclk1>;
 		pinctrl-names = "default";
+		powerdown = <&tlmm 33 GPIO_ACTIVE_LOW>;
+		reset = <&tlmm 28 GPIO_ACTIVE_LOW>;
+
 		dovdd-supply = <&pm8916_l6>;
 		avdd-supply = <&pm8916_l17>;
 		dvdd-supply = <&reg_cam_vdig>;
@@ -459,10 +425,12 @@ ports {
 		port {
 			ov5670: endpoint {
 				data-lanes = <1 2>;
-				remote-endpoint = <&csiphy1_ep>;
+				link-frequencies = /bits/ 64 <360000000>;
+				remote-endpoint = <&csiphy0_ep>;
 			};
 		};
 	};
+
 };
 
 &gpu {
@@ -693,6 +661,14 @@ ports {
 	cam_vdig_default: cam-vdig-default-state {
 		pins = "gpio17";
 		function = "gpio";
+
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	cam_sensor_mclk1: cam-sensor-mclk1 {
+		pins = "gpio27";
+		function = "cam_mclk1";
 
 		drive-strength = <2>;
 		bias-disable;
