Revert "Update msm8939-xiaomi-ido.dts"
This reverts commit 05bbbe497faa2cadd5aaccc1f4294984a24a19f4.

--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -392,7 +392,16 @@ ports {
 	vdda-supply = <&pm8916_l2>;
 	status = "okay";
 
+	ports {
+		port@0 {
+			reg = <0>;
+			csiphy0_ep: endpoint {
+				data-lanes = <1 2>;
+				remote-endpoint = <&ov5670>;
+			};
+		};
 	};
+};
 
 &cci {
 	status = "okay";
