--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -107,6 +107,18 @@
 		pinctrl-names = "default";
 	};
 
+	fake-reg-mclk2 {
+        	compatible = "regulator-fixed-clock";
+        	regulator-name = "fake-reg-mclk1";
+        	pinctrl-names = "default";
+        	enable-active-high;
+		regulator-boot-on;
+		startup-delay-us = <70000>;
+        	pinctrl-0 = <&cam_sensor_mclk1>;
+        	clocks = <&gcc GCC_CAMSS_MCLK1_CLK>;
+        	regulator-always-on;
+    };
+
     battery: battery-cell {
         compatible = "simple-battery";
         charge-full-design-microamp-hours = <4000000>;
@@ -402,7 +414,7 @@ ports {
 
 &cci_i2c0 {
 	camera-sensor@36 { // Primary front camera
-		compatible = "ovti,ov5675";
+		compatible = "ovti,ov5670";
 		
 		reg = <0x36>;
 
@@ -411,7 +423,7 @@ ports {
 		assigned-clock-rates = <23880000>;
 		clock-frequency = <19200000>;
 
-		pinctrl-0 = <&camera_front_default>, <&cam_sensor_mclk1>;
+		pinctrl-0 = <&camera_front_default>;
 		pinctrl-names = "default";
 		powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_LOW>;
 		reset-gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
