--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -107,18 +107,6 @@
 		pinctrl-names = "default";
 	};
 
-	fake-reg-mclk2 {
-        	compatible = "regulator-fixed-clock";
-        	regulator-name = "fake-reg-mclk1";
-        	pinctrl-names = "default";
-        	enable-active-high;
-		regulator-boot-on;
-		startup-delay-us = <70000>;
-        	pinctrl-0 = <&cam_sensor_mclk1>;
-        	clocks = <&gcc GCC_CAMSS_MCLK1_CLK>;
-        	regulator-always-on;
-    };
-
     battery: battery-cell {
         compatible = "simple-battery";
         charge-full-design-microamp-hours = <4000000>;
@@ -414,7 +402,7 @@ ports {
 
 &cci_i2c0 {
 	camera-sensor@36 { // Primary front camera
-		compatible = "ovti,ov5675";
+		compatible = "ovti,ov5670";
 		
 		reg = <0x36>;
 
@@ -422,9 +410,9 @@ ports {
 		clock-names = "xvclk";
 		clock-frequency = <19200000>;
 
-		pinctrl-0 = <&camera_front_default>;
+		pinctrl-0 = <&camera_front_default>, <&cam_sensor_mclk1>;
 		pinctrl-names = "default";
-		powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_LOW>;
+		//powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_LOW>;
 		reset-gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
 
 		dovdd-supply = <&pm8916_l6>;
@@ -675,6 +663,15 @@ ports {
 
 		drive-strength = <2>;
 		bias-disable;
+	};
+
+	camera_front_default: camera-front-default-state {
+		rst-pins {
+			pins = "gpio28";
+			function = "gpio";
+			drive-strength = <2>;
+			bias-disable;
+		};
 	};
 
 	cam_sensor_mclk1: cam-sensor-mclk1 {
