--- a/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
+++ b/arch/arm64/boot/dts/qcom/msm8939-xiaomi-ido.dts
@@ -93,15 +93,13 @@
 		};
 	};
 
-	reg_cam_vdig: reg_cam_vdig {
+	reg_cam_vdig: regulator-cam-vdig {
 		compatible = "regulator-fixed";
-		regulator-name = "reg_cam_vdig";
+		regulator-name = "cam_vdig";
+		startup-delay-us = <0>;
 		regulator-min-microvolt = <1200000>;
 		regulator-max-microvolt = <1200000>;
-		startup-delay-us = <100000>;
-		regulator-boot-on;
-	        regulator-always-on;
-	        vin-supply = <&pm8916_l2>;
+		enable-active-high;
 		gpio = <&tlmm 17 GPIO_ACTIVE_HIGH>;
 		pinctrl-0 = <&cam_vdig_default>;
 		pinctrl-names = "default";
@@ -389,7 +387,7 @@ ports {
 		port@0 {
 			reg = <0>;
 			csiphy0_ep: endpoint {
-				data-lanes = <0 1>;
+				data-lanes = <1 2>;
 				remote-endpoint = <&ov5670>;
 			};
 		};
@@ -401,19 +399,20 @@ ports {
 };
 
 &cci_i2c0 {
-	camera-sensor@36 { // Primary front camera
+	camera-sensor@10 { // Primary front camera
 		compatible = "ovti,ov5670";
 		
-		reg = <0x36>;
+		reg = <0x10>;
 
 		clocks = <&gcc GCC_CAMSS_MCLK1_CLK>;
 		clock-names = "xvclk";
 		clock-frequency = <19200000>;
+		clock-rates = <19200000>;
 
 		pinctrl-0 = <&camera_front_default>, <&cam_sensor_mclk1>;
 		pinctrl-names = "default";
-		//powerdown-gpios = <&tlmm 33 GPIO_ACTIVE_LOW>;
-		reset-gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
+		powerdown = <&tlmm 33 GPIO_ACTIVE_LOW>;
+		reset = <&tlmm 28 GPIO_ACTIVE_LOW>;
 
 		dovdd-supply = <&pm8916_l6>;
 		avdd-supply = <&pm8916_l17>;
@@ -424,12 +423,13 @@ ports {
 
 		port {
 			ov5670: endpoint {
-				data-lanes = <0 1>;
+				data-lanes = <1 2>;
+				link-frequencies = /bits/ 64 <360000000>;
 				remote-endpoint = <&csiphy0_ep>;
-				link-frequencies = /bits/ 64 <450000000>;
 			};
 		};
 	};
+
 };
 
 &gpu {
