--- a/arch/arm64/boot/dts/qcom/msm8939.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8939.dtsi
@@ -969,25 +969,41 @@
 				bias-pull-down;
 			};
 
+			camera_front_default: camera-front-default-state {
+				pwdn-pins {
+					pins = "gpio33";
+					function = "gpio";
+					drive-strength = <16>;
+					bias-disable;
+				};
+
+				rst-pins {
+					pins = "gpio28";
+					function = "gpio";
+					drive-strength = <16>;
+					bias-disable;
+				};
+			};
+
 			camera_rear_default: camera-rear-default-state {
 				pwdn-pins {
 					pins = "gpio34";
 					function = "gpio";
-					drive-strength = <2>;
+					drive-strength = <16>;
 					bias-disable;
 				};
 
 				rst-pins {
 					pins = "gpio35";
 					function = "gpio";
-					drive-strength = <2>;
+					drive-strength = <16>;
 					bias-disable;
 				};
 
 				mclk0-pins {
 					pins = "gpio26";
 					function = "cam_mclk0";
-					drive-strength = <2>;
+					drive-strength = <16>;
 					bias-disable;
 				};
 			};
@@ -995,7 +1011,7 @@
 			cci0_default: cci0-default-state {
 				pins = "gpio29", "gpio30";
 				function = "cci_i2c";
-				drive-strength = <2>;
+				drive-strength = <16>;
 				bias-disable;
 			};
 
